# zivra

./: .gitignore  CONTRIBUTING.md  README.md  check-zivra.cmd  package-lock.json  package.json  playwright.config.js  start-zivra.cmd  stop-zivra.cmd
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/api/routes/: __init__.py  assistant.py  clipboard.py  content.py  dashboard.py  documents.py  emails.py  files.py  health.py  messages.py  notes.py  reminders.py  research.py  runtime.py  settings.py  sync.py  vision.py  web.py  workflows.py
backend/app/core/: __init__.py  config.py
backend/app/services/: __init__.py  audit.py  browser_launch.py  clipboard.py  content.py  documents.py  emails.py  files.py  memory.py  messages.py  notes.py  orchestrator.py  planning.py  policy.py  preferences.py  prompt_injection.py  reminders.py  research.py  secrets.py  sync.py  vision.py  webpages.py  websearch.py  whatsapp_cloud.py  workflows.py
backend/app/tools/: __init__.py  base.py  registry.py  safe.py
backend/tests/: test_audit.py  test_browser_launch.py  test_clipboard.py  test_config.py  test_content.py  test_desktop_tools.py  test_documents_service.py  test_emails.py  test_files_service.py  test_main.py  test_memory.py  test_messages.py  test_notes_service.py  test_orchestrator.py  test_planning.py  test_policy.py  test_preferences.py  test_reminders.py  test_research.py  test_secrets.py  test_sync.py  test_vision.py  test_webpages.py  test_websearch.py  test_workflows.py
dashboard/: app.js  index.html  manifest.webmanifest  (+5 more)
(+13 files in other folders)
