[project]
name = "zivra-assistant-backend"
version = "0.1.0"
description = "Local-first orchestration backend for the Zivra assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[tool.uv]
package = false
